# CatFactsProject

./: .env.example  .gitignore  README.md  pyproject.toml
api/: __init__.py  client.py  endpoints.py
config/: __init__.py  config.py
tests/: __init__.py  conftest.py  test_fact_validation.py  test_facts_list.py  test_facts_pagination.py  test_random_fact.py
